# Cpp_GameProjects

./: .gitignore  LICENSE  README.md
GameLibrary/: CMakeLists.txt  GameLibrary.sln  GameLibrary.vcxproj  GameLibrary.vcxproj.filters
GameLibrary/Core/: Engine.cpp  Engine.hpp  EngineConfig.hpp  ServiceContainer.hpp
GameLibrary/Fx/: FlashFx.cpp  FlashFx.hpp  Fx.hpp  ParticleFx.cpp  ParticleFx.hpp  ShakeFx.cpp  ShakeFx.hpp
GameLibrary/GameObject/: Component.hpp  GameObject.cpp  GameObject.hpp  Transform.hpp
GameLibrary/Interfaces/: ICollidable.hpp  IGraphics.hpp  IInputProvider.hpp  ISceneManager.hpp  ITimeProvider.hpp
GameLibrary/Platform/Windows/: Window.cpp  Window.hpp
GameLibrary/Scene/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
GameLibrary/Systems/: ConfigSystem.cpp  ConfigSystem.hpp  EventSystem.cpp  EventSystem.hpp  FxSystem.cpp  FxSystem.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  InputSystem.cpp  InputSystem.hpp  Logger.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  SaveSystem.cpp  SaveSystem.hpp  SoundSystem.cpp  SoundSystem.hpp  TimeSystem.cpp  TimeSystem.hpp
GameLibrary/include/Actor/: Actor.hpp  AutoGridMovementComponent.hpp  BoxCollider.hpp  Component.hpp  Controller.hpp  GridMovementComponent.hpp  LinearMovementComponent.hpp  MovementComponent.hpp  Pawn.hpp  Transform.hpp
GameLibrary/include/Components/: AutoGridMovementComponent.hpp  BoxCollider.hpp  GridMovementComponent.hpp  LinearMovementComponent.hpp  MovementComponent.hpp  Transform.hpp
GameLibrary/include/Core/: Engine.hpp  EngineConfig.hpp  ServiceContainer.hpp
GameLibrary/include/Data/: YamlNode.hpp  YamlParser.hpp
GameLibrary/include/Fx/: FlashFx.hpp  Fx.hpp  ParticleFx.hpp  ShakeFx.hpp
GameLibrary/include/GameObject/: BoxCollider.hpp  Component.hpp  GameObject.hpp  Transform.hpp
GameLibrary/include/Input/: InputActionMap.hpp
GameLibrary/include/Interfaces/: ICollidable.hpp  IGraphics.hpp  IInitializable.hpp  IInputProvider.hpp  IPhysicsSystem.hpp  ISceneManager.hpp  ITimeProvider.hpp
GameLibrary/include/Memory/: ObjectPool.hpp
GameLibrary/include/Platform/: Window.hpp
GameLibrary/include/Scene/: Scene.hpp  SceneManager.hpp
GameLibrary/include/Services/: AudioService.hpp  ConfigService.hpp  EventService.hpp  FxService.hpp  GraphicsService.hpp  InputService.hpp  PhysicsService.hpp  ResourceService.hpp  SaveService.hpp  TimeService.hpp
GameLibrary/include/States/: IState.hpp  StateMachine.hpp
GameLibrary/include/Systems/: ConfigSystem.hpp  EventSystem.hpp  FxSystem.hpp  GraphicsSystem.hpp  InputSystem.hpp  Logger.hpp  PhysicsSystem.hpp  SaveSystem.hpp  SoundSystem.hpp  TimeSystem.hpp
GameLibrary/include/Time/: Easing.hpp  Timer.hpp  Tween.hpp
GameLibrary/include/UI/: MenuSelector.hpp  RichText.hpp  TextBox.hpp
GameLibrary/include/Utility/: Random.hpp
GameLibrary/src/Actor/: Actor.cpp  AutoGridMovementComponent.cpp  BoxCollider.cpp  Controller.cpp  GridMovementComponent.cpp  LinearMovementComponent.cpp  MovementComponent.cpp  Pawn.cpp
GameLibrary/src/Components/: AutoGridMovementComponent.cpp  BoxCollider.cpp  GridMovementComponent.cpp  LinearMovementComponent.cpp  MovementComponent.cpp
GameLibrary/src/Core/: Engine.cpp
GameLibrary/src/Data/: YamlNode.cpp  YamlParser.cpp
GameLibrary/src/Fx/: FlashFx.cpp  ParticleFx.cpp  ShakeFx.cpp
GameLibrary/src/GameObject/: BoxCollider.cpp  GameObject.cpp
GameLibrary/src/Input/: InputActionMap.cpp
GameLibrary/src/Platform/: Window.cpp
GameLibrary/src/Scene/: Scene.cpp  SceneManager.cpp
GameLibrary/src/Services/: AudioService.cpp  ConfigService.cpp  EventService.cpp  FxService.cpp  GraphicsService.cpp  InputService.cpp  PhysicsService.cpp  ResourceService.cpp  SaveService.cpp  TimeService.cpp
GameLibrary/src/Systems/: ConfigSystem.cpp  EventSystem.cpp  FxSystem.cpp  GraphicsSystem.cpp  InputSystem.cpp  PhysicsSystem.cpp  SaveSystem.cpp  SoundSystem.cpp  TimeSystem.cpp
GameLibrary/src/Time/: Timer.cpp  Tween.cpp
GameLibrary/src/UI/: MenuSelector.cpp  RichText.cpp  TextBox.cpp
SnakeGame/: Application.cpp  Application.hpp  CMakeLists.txt  SnakeGame.sln  SnakeGame.vcxproj  SnakeGame.vcxproj.filters  engine.yaml  game.yaml  main.cpp
SnakeGame/Components/: FoodSpawner.cpp  FoodSpawner.hpp  GameManager.cpp  GameManager.hpp  GoldenPickup.cpp  GoldenPickup.hpp  GridBackground.cpp  GridBackground.hpp  Pickup.cpp  Pickup.hpp  SnakeController.cpp  SnakeController.hpp
SnakeGame/Config/: SnakeGameConfig.hpp
SnakeGame/Data/: GameData.hpp
SnakeGame/Events/: GameEvents.hpp
SnakeGame/Scenes/: GameScene.cpp  GameScene.hpp  ResultScene.cpp  ResultScene.hpp  TitleScene.cpp  TitleScene.hpp
SnakeGame/include/: Application.hpp
SnakeGame/include/Components/: FoodSpawner.hpp  GameManager.hpp  Pickup.hpp  (+4 more)
SnakeGame/src/: Application.cpp
TextRPG/: .clang-format  CMakeLists.txt  engine.yaml
TextRPG/data/: jobs.yaml
TextRPG/include/: Application.hpp
TextRPG/src/: Application.cpp  main.cpp
(+73 files in other folders)
